--- a/spa/admin/login-logs-activity/assets/style.css
+++ b/spa/admin/login-logs-activity/assets/style.css
@@ -14,6 +14,34 @@
     border: 1px solid #f25500;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
+.tpsa-login-log-activity h1 {
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #222;
+}
+.tpsa-login-log-activity-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+.tpsa-login-log-activity-items-per-page select {
+    width: 60px;
+    padding: 2px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid #222;
+}
+.tpsa-login-log-activity-header input {
+    padding: 2px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid #222;
+}
 .tpsa-login-log-activity-tabs button.active {
     background-color: #fff;
     color: #f25500;
@@ -35,4 +63,24 @@
 .tpsa-table td {
     border: 1px solid #ccc;
     padding: 8px;
+}
+.tpsa-login-log-activity-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    margin-top: 24px;
+    font-size: 14px;
+}
+
+.tpsa-login-log-activity-pagination button {
+    padding: 6px 12px;
+    font-size: 14px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.tpsa-login-log-activity-pagination span {
+    font-weight: 500;
+    color: #333;
 }
