--- a/spa/admin/part/QuestionMarkTooltip/style.css
+++ b/spa/admin/part/QuestionMarkTooltip/style.css
@@ -31,6 +31,7 @@
 .wp-tooltip-text {
     visibility: hidden;
     opacity: 0;
+    width: 120px;
     transition: all 0.2s ease;
     position: absolute;
     bottom: 125%;
@@ -43,6 +44,7 @@
     text-align: center;
     font-weight: 400;
     font-size: 12px;
+    line-height: 1.4;
     z-index: 9999;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
