--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -67,3 +67,18 @@
     border: none;
     font-weight: 500;
 }
+.tpsa-rating-message {
+    font-size: 12px;
+    font-weight: 300;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    color: #7f868d;
+}
+.tpsa-rating-message .tpsa-stars {
+    color: #ffb900;
+    font-size: 14px;
+    margin: 0 5px;
+    font-weight: 500;
+}
