--- a/spa/admin/analytics/assets/style.css
+++ b/spa/admin/analytics/assets/style.css
@@ -1,7 +1,7 @@
 .tpsa-analytics-wrapper {
     width: 100%;
     height: 200px;
-    background-color: #f25500;
+    background-color: #814bfe;
     display: flex;
     align-items: center;
     justify-content: center;
