--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -1,6 +1,30 @@
+.tpsa-topbar-info-area a {
+    display: inline-block;
+    padding: 10px 25px;
+    cursor: pointer;
+    border-radius: 4px;
+    color: #814bfe;
+    border: 1px solid #814bfe;
+    font-weight: 500;
+    font-size: 14px;
+}
+.tpsa-titles h1 {
+    font-size: 24px;
+    font-weight: 500;
+    padding: 0;
+}
+.tpsa-icons img {
+    width: 48px;
+    height: 48px;
+    margin-right: 10px;
+}
+.tpsa-logo-title-area {
+    display: flex;
+    align-items: center;
+}
 .tpsa-plugin-topbar-wrapper {
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 20px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,8 +56,8 @@
     box-shadow: none;
 }
 .tpsa-siderbar-wrapper ul li a.active {
-    color: #f25500;
-    background-color: #fff;
+    color: #814bfe;
+    background-color: #ece6f9;
 }
 .tpsa-main-wrapper {
     padding: 50px;
@@ -48,7 +72,7 @@
     font-weight: 500;
     color: #1d2327;
     margin-bottom: 35px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #e2d8fb;
     padding-bottom: 20px;
 }
 .tpsa-setting-row {
@@ -62,7 +86,7 @@
     padding: 12px 30px;
     cursor: pointer;
     border-radius: 4px;
-    background-color: #f25500;
+    background-color: #814bfe;
     color: #fff;
     border: none;
     font-weight: 500;
@@ -74,7 +98,7 @@
     position: absolute;
     bottom: 10px;
     right: 20px;
-    color: #7f868d;
+    color: #814bfe;
 }
 .tpsa-rating-message .tpsa-stars {
     color: #ffb900;
