--- a/spa/admin/login-logs-activity/assets/style.css
+++ b/spa/admin/login-logs-activity/assets/style.css
@@ -1,23 +1,23 @@
 .tpsa-login-log-activity-tabs {
     display: flex;
     gap: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #bba8e7;
     padding-bottom: 10px;
 }
 .tpsa-login-log-activity-tabs button {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #f25500;
+    background-color: #814bfe;
     color: #fff;
     cursor: pointer;
-    border: 1px solid #f25500;
+    border: 1px solid #814bfe;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 .tpsa-login-log-activity h1 {
-    margin-bottom: 20px;
-    font-weight: 600;
-    color: #222;
+    margin-bottom: 18px;
+    font-weight: 500;
+    color: #1d2327;
 }
 .tpsa-login-log-activity-header {
     display: flex;
@@ -33,18 +33,19 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid #222;
+    border: 1px solid #bba8e7;
 }
-.tpsa-login-log-activity-header input {
+.tpsa-login-log-activity-header input,
+.tpsa-login-log-activity-header input:focus {
     padding: 2px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid #222;
+    border: 1px solid #bba8e7;
 }
 .tpsa-login-log-activity-tabs button.active {
     background-color: #fff;
-    color: #f25500;
+    color: #814bfe;
     border: 1px solid #ccc;
 }
 .tpsa-login-log-activity-container {
@@ -55,13 +56,13 @@
     border-collapse: collapse;
 }
 .tpsa-table th {
-    border: 1px solid #ccc;
+    border: 1px solid #bba8e7;
     padding: 8px;
-    background: #f4f4f4;
+    background: #fbf9ff;
     text-align: left;
 }
 .tpsa-table td {
-    border: 1px solid #ccc;
+    border: 1px solid #bba8e7;
     padding: 8px;
 }
 
