--- a/spa/admin/analytics/assets/style.css
+++ b/spa/admin/analytics/assets/style.css
@@ -1,3 +1,19 @@
+.tpsa-analytics-wrapper {
+    width: 100%;
+    height: 200px;
+    background-color: #814bfe;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    margin-bottom: 30px;
+}
+
+.tpsa-analytics-wrapper h1 {
+    color: #fff;
+    font-size: 60px;
+    margin: 0;
+}
 /* Main container for the plugin overview and other elements */
 .plugin-overview {
     margin: 30px auto;
