--- a/spa/admin/analytics/assets/style.css
+++ b/spa/admin/analytics/assets/style.css
@@ -166,10 +166,14 @@
     color: #7b6f7c;
     text-decoration: none;
     font-weight: 500;
+    padding: 5px 10px;
+    border: 1px solid #7b6f7c;
+    border-radius: 4px;
 }
 
 .tpsa-login-attempts-analytics-item .tp-details a:hover {
     color: #814bfe;
+    background-color: #fff;
     text-decoration: underline;
 }
 
