--- a/spa/admin/analytics/assets/style.css
+++ b/spa/admin/analytics/assets/style.css
@@ -40,7 +40,7 @@
 .feature-title {
     font-size: 26px;
     color: #1d2327;
-    margin-bottom: 15px;
+    margin-bottom: 15px !important;
     font-family: 'Arial', sans-serif;
     font-weight: 600;
 }
