--- a/spa/admin/analytics/assets/style.css
+++ b/spa/admin/analytics/assets/style.css
@@ -7,11 +7,12 @@
     justify-content: center;
     border-radius: 30px;
     margin-bottom: 30px;
+    padding: 10px;
 }
 
 .tpsa-analytics-wrapper h1 {
     color: #fff;
-    font-size: 60px;
+    font-size: 48px;
     margin: 0;
 }
 /* Main container for the plugin overview and other elements */
@@ -26,6 +27,7 @@
 
 /* Feature section layout */
 .feature-section {
+    max-width: 100%;
     margin-bottom: 40px;
     background-color: white;
     border-radius: 8px;
@@ -181,36 +183,6 @@
     text-decoration: underline;
 }
 
-/* Media query for responsiveness */
-@media screen and (max-width: 768px) {
-    .plugin-overview {
-        padding: 20px;
-        margin: 15px;
-    }
-
-    .feature-section {
-        padding: 15px;
-    }
-
-    .feature-title {
-        font-size: 22px;
-    }
-
-    .feature-description {
-        font-size: 14px;
-    }
-
-    .tpsa-login-attempts-analytics {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .tpsa-login-attempts-analytics-item {
-        width: 80%;
-        margin-bottom: 20px;
-    }
-}
-
 /**adfbdadfbdfbdafbadfbadf**/
 /* Main container with custom gradient background */
 .section-container {
@@ -282,4 +254,17 @@
     background: linear-gradient(145deg, #ff6f61, #f8a5c2);
     transform: translateY(-2px);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 1300px) {
+    .plugin-overview {
+        max-width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .feature-section {
+        max-width: 45%;
+        margin-bottom: 15px;
+    }
 }
