--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -1,3 +1,26 @@
+.tpsm-guide-me-button {
+    position: fixed;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    writing-mode: vertical-rl;
+    border: 1px solid #ddd;
+    border-right: 0;
+    padding: 15px 7px;
+    border-radius: 6px 0 0 6px;
+    cursor: pointer;
+    color: #303030;
+    font-weight: 500;
+    /* background-color: #faf1eb; */
+    background-color: #f1eef9;
+}
+.tpsm-guide-me-button a {
+    text-decoration: none;
+}
+.tpsm-guide-me-button a:focus {
+    box-shadow: none;
+    outline: none;
+}
 .tpsa-topbar-info-area a {
     display: inline-block;
     padding: 10px 25px;
