--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -11,11 +11,11 @@
     cursor: pointer;
     color: #303030;
     font-weight: 500;
-    /* background-color: #faf1eb; */
     background-color: #f1eef9;
 }
 .tpsm-guide-me-button a {
     text-decoration: none;
+    color: #814bfe;
 }
 .tpsm-guide-me-button a:focus {
     box-shadow: none;
