--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -141,13 +141,13 @@
 }
 
 .tp-help-icon {
-    background-color: #814bfe;
-    color: #fff;
+    border: 1px solid #814bfe;
+    background-color: transparent;
+    color: #814bfe;
     font-size: 14px;
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    border: none;
     cursor: pointer;
     display: flex;
     justify-content: center;
