--- a/assets/admin/css/wizard.css
+++ b/assets/admin/css/wizard.css
@@ -19,6 +19,7 @@
 .tpsm-wizard-container .tpsm-wizard-logo img {
     width: 80px;
     height: 80px;
+    padding-bottom: 15px;
 }
 .tpsm-wizard-container h3 {
     font-size: 20px;
@@ -29,6 +30,13 @@
     font-size: 15px;
     text-align: left;
     margin-bottom: 35px;
+    color: #374151; /* text-gray-700 */
+    font-size: 0.875rem; /* text-sm = 14px */
+    line-height: 1.625;
+    background-color: #eff6ff; /* bg-blue-50 */
+    border: 1px solid #dbeafe; /* border-blue-100 */
+    border-radius: 0.5rem; /* rounded-lg */
+    padding: 1rem;
 }
 .tpsm-wizard-container form {
     padding-top: 20px;
@@ -45,9 +53,38 @@
     line-height: 35px;
     margin-bottom: 0;
 }
-.tpsm-wizard-container form button.active::after {
-    content: ' ➜';
-    position: absolute;
-    left: 0;
-    top: 0;
+
+.tpsm-optin-allow {
+    background: linear-gradient(to right, #2563eb, #9333ea) !important;
+    color: white;
+    padding-top: 0.875rem;
+    padding-bottom: 0.875rem;
+    height: auto;
+    transition: all 0.2s ease;
+    transform: scale(1);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    border: none !important;
+}
+.tpsm-optin-allow:hover {
+    background: linear-gradient(to right, #1d4ed8, #7e22ce);
+    transform: scale(1.01);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+}
+.tpsm-optin-deny {
+    color: #6b7280 !important;
+    background-color: transparent !important;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
+    height: auto;
+    transition: color 0.2s ease, background-color 0.2s ease,
+        border-color 0.2s ease !important;
+    border-radius: 0.5rem;
+    border: 1px solid #e5e7eb !important;
+}
+
+.tpsm-optin-deny:hover {
+    color: #374151 !important;
+    background-color: #f9fafb !important;
+    border-color: #d1d5db !important;
 }
