--- a/spa/admin/login-template/assets/style.css
+++ b/spa/admin/login-template/assets/style.css
@@ -3,11 +3,15 @@
 }
 .template-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
 }
 .single-template {
     border: 1px solid #ddd;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
 }
 .__react_modal_image__header {
     width: 50% !important;
@@ -18,4 +22,27 @@
     transform: translateX(-50%);
     display: flex;
     gap: 12px; /* space between buttons */
+}
+.template-screenshot {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+.single-template h3 {
+    margin-top: 0 !important;
+}
+.template-content {
+    padding: 10px;
+}
+.use-template {
+    width: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    background: linear-gradient(145deg, #c8f4c3, #a8e1a3);
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-weight: 500;
+    cursor: pointer;
 }
