--- a/spa/admin/login-template/assets/style.css
+++ b/spa/admin/login-template/assets/style.css
@@ -7,7 +7,7 @@
 .template-studio .tabs {
     display: flex;
     gap: 8px;
-    margin: 0 0 14px 0;
+    /* margin: 0 0 14px 0; */
 }
 .template-studio .tabs .button {
     border-radius: 10px;
@@ -217,6 +217,9 @@
     background-color: #fff;
     color: #814bfe;
     border: 1px solid #ccc;
+}
+.section-title {
+    margin-top: 20px;
 }
 
 /* Responsive */
