--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -206,3 +206,117 @@
 .tp-field .tp-field-input .tp-site-url-input input[type="text"] {
     width: 50%;
 }
+
+
+/***Popup style for pro plugin ****/
+
+/* Overlay */
+.tpsa-pro-popup-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(13, 10, 30, 0.55);
+    backdrop-filter: blur(3px);
+    z-index: 999999;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Popup Box */
+.tpsa-pro-popup-box {
+    position: absolute;
+    left: 50%;
+    top: 150px;
+    transform: translateX(-50%);
+    background: #ffffff;
+    width: 420px;
+    padding: 25px 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 35px rgba(0, 0, 0, 0.20);
+    animation: popupShow 0.3s ease-out;
+}
+
+/* Animation */
+@keyframes popupShow {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.tpsa-pro-popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tpsa-pro-popup-header h2 {
+    margin: 0;
+    font-size: 20px;
+    color: #1d2327;
+}
+
+.tpsa-pro-close {
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    line-height: 20px;
+}
+
+/* Icon */
+.tpsa-pro-icon-box {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.tpsa-pro-icon-box img {
+    width: 70px;
+    opacity: 0.9;
+}
+
+/* Buttons */
+.tpsa-pro-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.tpsa-pro-btn {
+    flex: 1;
+    padding: 12px;
+    text-align: center;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+    cursor: pointer;
+}
+
+.purchase-btn {
+    background: #814bfe;
+}
+
+.license-btn {
+    background: #3d444b;
+}
+
+/* Small link */
+.tpsa-pro-small-link {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.tpsa-pro-small-link a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #814bfe;
+    font-weight: 500;
+}
