--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -284,6 +284,9 @@
     font-weight: 500;
     color: #fff;
     cursor: pointer;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .tpsa-pro-btn:hover {
